# goit-pythonweb-hw-06

./: README.md  alembic.ini  config.py  models.py  my_select.py  pyproject.toml  seed.py  test_queries.py
alembic/: env.py
alembic/versions/: initial_migration.py
