[tool.poetry]
name = "university-db"
version = "0.1.0"
description = "University database with SQLAlchemy"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "."}]

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
alembic = "^1.12.0"
faker = "^20.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
